# musicli

./: .gitignore  Makefile.programs  README.md  TODO.md  interface.py  musicli.py  playback.py  player.py  pyproject.toml  requirements.txt  setup.cfg  song.py  todo.md
musicli/: interface.py  main.py  player.py  song.py
musicli_sequencer/: __init__.py
tools/: cli-synth.cpp  musicli.cpp
