[build-system]
requires = ["flit_core ~=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "musicli"
authors = [{name = "Aaron Friesen"}]
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
dependencies = [
	"mido ~=1.2.10",
	"pyfluidsynth ~=1.3.0",
]

[project.urls]
Home = "https://frie.dev/musicli"

[project.scripts]
musicli = "musicli.main:main"
