[metadata]
name = musicli
version = 2.0.0
author = Aaron Friesen
author_email = maugrift@maugrift.com
description = A MIDI sequencer for the terminal
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Maugrift/musicli
license = GNU General Public License v3 or later (GPLv3+)
classifiers =
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Programming Language :: Python :: 3
	Operating System :: OS Independent

[options]
zip_safe = True
packages = musicli
install_requires =
	mido ~= 1.2.10
	pyfluidsynth ~= 1.3.0
python_requires >= 3.10

[options.entry_points]
console_scripts =
	musicli = musicli.main:main
